Closed Bug 99910 Opened 23 years ago Closed 23 years ago

Password remember - yes, no, never for this site - isn't remembered between sessions

Categories

(SeaMonkey :: Passwords & Permissions, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9.5

People

(Reporter: petter.sundlof, Assigned: morse)

References

()

Details

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.4) Gecko/20010915 BuildID: 0.9.4 Password manager doesn't remember decision "Never for this site" made between sessions Reproducible: Always Steps to Reproduce: 1. Go to the attached URL 2. Click the Login button 3. When password manager queries you, select "Never for this site" 4. Restart Mozilla 5. Go to the atteched URL again 6. Click the Login button Actual Results: After 6, the password manager dialog appears again, not respecting your previous choice. Expected Results: The dialog should not appear, as one chose "Never for this site" the first time. This worked fine in a august 25th Mozilla CVS build, as well as 0.9.3
No-one cares?
This is very strange. I've made absolutely no changes to the file, but now this is happening with 0.9.3/aug 25th CVS build. Anyhow, it seems broken.
WFM linux build 2001-09-19-04-0.9.4
Closing out as WFM per tpreston's comment as well as the reporter's own confusion.
Status: UNCONFIRMED → RESOLVED
Closed: 23 years ago
Resolution: --- → WORKSFORME
Oh well, this is certainly the last bug I am reporting.
I'm not trying to discourage you from reporting bugs. It's just that in this case we are unable to reproduce it, and you yourself have admitted that your observations are questionable. If you can figure out a pattern as to what is happening, and give enough details to reproduce the problem, I'll investigate further. I certainly welcome your help on this -- without it I cannot do anything further with this bug.
There's nothing further I can do. I cleared .mozilla, tried with every Mozilla version I have around (0.9.3, aug 25th CVS and 0.9.4), and it never remembers my "Never for this site" option on the testcase in the URL. This I can reproduce. If you cannot, this is strange.
When you say you cleared .mozilla, I presume that means that you are starting with a fresh profile. Just to be sure, can you use the profile manager and make sure you have a fresh profile. Also can you try it on another machine. Thanks. Terry, can you try once more to see if you can reproduce this. Thanks.
Oh, now I see why you can't reproduce this. You need to copy the file to the local filesystem. I thought I had tested this, but now I see that it works when it is on findus.dhs.org, but not when it's loaded locally (how I usually do it). I guess this could be releated to it not registering file:/// as a domain, or the directory as a domain, or somesuch problem?
Good catch. Terry, can you retest this using a local file and see if it fails. If so, please reopen the bug. Thanks.
Steve, yes on linux build 2001-09-21-04-0.9.4 never for this site is not remembered, reopening BTW it's Terri, not Terry :-)
Status: RESOLVED → UNCONFIRMED
Resolution: WORKSFORME → ---
Sorry Terri. Very strange. No entry is being made in the list of sites so that explains why the "never" is not being remembered. That's a bug. But what I don't understand is how that decision is being remembered during the current session. Needs more investigating. Also am able to reproduce this on winNT, so confirming and changing the OS to all
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
OK, the strangeness is now explained. An entry is being made in the table but it is blank. That explains why it works for the current session. For some reason the blank entry is not being properly read in when the browser restarts. That should be easy for me to track down.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.5
cc'ing jag and alecf for reviews
Comment on attachment 50282 [details] [diff] [review] patch to allow blank lines to be read in >Index: singsign.cpp >=================================================================== >RCS file: /cvsroot/mozilla/extensions/wallet/src/singsign.cpp,v >retrieving revision 1.196 >diff -u -r1.196 singsign.cpp >--- singsign.cpp 2001/08/30 05:23:14 1.196 >+++ singsign.cpp 2001/09/21 18:46:48 >@@ -1667,12 +1667,8 @@ > /* read the reject list */ > si_lock_signon_list(); > while (NS_SUCCEEDED(si_ReadLine(strm, buffer))) { >- if (buffer.Length() == 0) { >- /* something's wrong */ >- si_unlock_signon_list(); >- return -1; >- } >- if (buffer.CharAt(0) == '.') { >+ /* a blank line is perfectly valid here -- corresponds to a local file */ >+ if (buffer.Length() > 0 && buffer.CharAt(0) == '.') { > break; /* end of reject list */ > } > si_StripLF(buffer); Steve, could you use !buffer.IsEmpty() instead of comparing the buffer's length against 0? It's potentially cheaper and more expressive. r=jag if you make that change.
Attachment #50282 - Flags: review+
Comment on attachment 50282 [details] [diff] [review] patch to allow blank lines to be read in sr=alecf
Attachment #50282 - Flags: superreview+
Fix checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: