bug 99910, password manager never isn't remembered, r=jag, sr=alecf